--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   provider: ^6.1.5+1
   uuid: ^4.5.1
   sqflite: ^2.4.2
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
+  cloud_firestore: ^6.0.1
 
 dev_dependencies:
   flutter_test:
