--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
   cloud_firestore: ^6.0.1
+  hive_flutter: ^1.1.0
+  build_runner: ^2.8.0
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
